// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dkPtRN kqnWZi"
>
  <div
    className="sc-eCImPb dWzspa"
  >
    <span
      className="sc-jRQBWg"
    >
      0
    </span>
    <span
      className="sc-gKclnd icXDZq"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdvvtL sc-gsDKAQ gPIhRN djDaHe"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dkPtRN kqnWZi"
>
  <div
    className="sc-hKwDye hGDmJA"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdvvtL sc-gsDKAQ dsCIzG djDaHe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dkPtRN kqnWZi"
>
  <div
    className="sc-hKwDye hGDmJA"
  >
    🍅
  </div>
  <button
    className="sc-bdvvtL sc-gsDKAQ dsCIzG djDaHe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dkPtRN kqnWZi"
>
  <div
    className="sc-hKwDye hGDmJA"
  >
    🛌
  </div>
  <button
    className="sc-bdvvtL sc-gsDKAQ dsCIzG djDaHe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
